--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,70 +1,5 @@
 
-@media only screen and (min-width: 900px) and (max-width: 1024px)
-{
-    #header{
-        height: 110px;
-    }
-    .logo-header{
-        width: 152px;
-        margin-top: 5px;
-        height: 67px;
-    }
-    .icon-search{
-        top: 6px;
-        outline-offset: 8px;
-    }
-    .nav-bar div i, .nav-bar div div i{
-        font-size: 18px;
-    }
-    .nav-bar > div h5{
-        margin-top: 35px;
-        font-size: 12px;
-    }
-    .circle-left{
-        margin-left: 48%;
-    }
-    .circle-right{
-        margin-left: -49%;
-        padding-right: 5px;
-        padding-top: 6px;
-    }
-    .portfolio-list{
-        width: 83%;
-        margin-left: 9%;
-    }
-    .portfolio-list div{
-        margin-right: 15px;
-        padding-top: 8px;
-    }
-    .portfolio-list > div a{
-        font-size: 14px;
-        top: -7px;
-        position: relative;
-    }
-    .nav-customer{
-        margin-top: 5px;
-    }
-    .nav-customer > div:hover .drop-list-item{
-        top:48px;
-    }
-    .portfolio-list > div:hover .drop-list-item{
-        top: 78px;
-    }
-    .portfolio-list > div:hover .product-summary-view{
-        top: 58px;
-        left: 90px;
-    }
-    .product-summary-view{
-        width: 90%;
-        margin-left: 0px;
-    }
-    /**/
-    .product-bar div a{
-        font-size: 14px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 820px)
+@media (min-width: 768px) and (max-width: 991px)
 {
     #header{
         height: 110px;
@@ -109,7 +44,7 @@
          width: 140px;
      }
 }
-@media (min-width: 360px) and (max-width: 500px)
+@media (min-width: 540px) and (max-width: 767px)
 {
     #header{
         height: 110px;
@@ -129,7 +64,7 @@
         margin-top: 48px;
     }
     .circle-left{
-        margin-left: 38%;
+        margin-right: -50%;
     }
     .circle-right{
         margin-left: -40%;
@@ -141,7 +76,7 @@
         margin: 2px 7px;
     }
 }
-@media (min-width: 200px) and (max-width: 359px)
+@media (max-width: 539px)
 {
     #header{
         height: 110px;
@@ -164,7 +99,7 @@
          margin-top: 38px;
      }
      .circle-left{
-         margin-left: 23%;
+         margin-left: 40%;
      }
      .circle-right{
          margin-left: -60%;
