--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1,6 +1,7 @@
 #content{
     height: max-content;
     width: 80%;
+    position: relative;
     background-color: white;
     margin: 10px auto;
     border-radius: 10px;
@@ -245,13 +246,14 @@
 .small-product-list {
     display: flex;
     list-style: none;
+    justify-content: justify;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 16px;
 }
 
 .small-product-item {
-    width: calc(10% - 10px);
+    width: calc(20% - 10px);
 }
 
 .small-product-link {
@@ -275,7 +277,7 @@
 
 .small-product-link span {
     display: block;
-    font-size: 1.4rem;
+    font-size: 1.5vh;
     color: black;
     text-shadow: 1px 2px -1px gray;
     margin: 0 8px;
