--- a/CSS/signform.css
+++ b/CSS/signform.css
@@ -83,10 +83,10 @@
     height: 20px;
 }
 
-#wraper .container a {
+#wrapers .container a {
     float: right;
 }
-#wraper .note-register {
+#wrapers .note-register {
     margin: 15px 0;
 }
 
