--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -37,5 +37,18 @@
         display: block;
         margin: 0;
     }
+    .small-product-list {
+        display: flex;
+        gap: 0;
+        list-style: none;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-top: 16px;
+    }
+    
+    .small-product-item {
+        width: calc(27.7% - 10px);
+        margin-top: 5px;
+    }
     
 }
