--- a/CSS/signform.css
+++ b/CSS/signform.css
@@ -12,14 +12,13 @@ body {
 }
 
 #wrapers {
-    min-width: 400px;
-    height: 430px;
+    width: 400px;
     background-color: rgb(255,255,255,0.2);
     padding: 40px 20px;
     border-radius: 6px;
     box-shadow: 0 0 30px rgb(0,0,0,0.5);
     backdrop-filter: blur(20px);
-    position: relative;
+    position: absolute;
     overflow: hidden;
 }
 .icon-close{
@@ -96,39 +95,18 @@ body {
  a {
     text-decoration: none;
 }
-.handle-button {
-    width: 100%;
-    height: 50px;
-    padding: 15px 0px;
-    background-color: #162938;
-    border-radius: 6px;
-    color: #fff;
-    font-size: 1.1em;
-    font-weight: 500;
-    letter-spacing: 1px;
-    margin: 15px 0;
-    border: none;
-    transition: .5s;
-    cursor: pointer;
-    box-shadow: 0 0 5px rgb(0,0,0,0.5);
-}
-.handle-button:hover {
-    background: #fff;
-    color: #162938;
-}
 #wrapers .note-register {
     margin: 15px 0;
 }
 
 #register {
     min-width: 400px;
-    height: 530px;
     background-color: rgb(255,255,255,0.2);
     padding: 40px 20px;
     border-radius: 6px;
     box-shadow: 0 0 30px rgb(0,0,0,0.5);
     backdrop-filter: blur(20px);
-    position: relative;
+    position: absolute;
     overflow: hidden;
 }
 #forgot-password{
@@ -138,7 +116,7 @@ body {
     border-radius: 6px;
     box-shadow: 0 0 30px rgb(0,0,0,0.5);
     backdrop-filter: blur(20px);
-    position: relative;
+    position: absolute;
     overflow: hidden;
 }
 .font-bold {
