--- a/CSS/signform.css
+++ b/CSS/signform.css
@@ -4,23 +4,25 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-#wrapers {
+#wraper {
     width: 400px;
     background-color: rgb(255,255,255,0.2);
     padding: 40px 20px;
     border-radius: 6px;
     box-shadow: 0 0 30px rgb(0,0,0,0.5);
-    position: absolute;
 }
-[id*='s']{
-    margin: 40px 30vw;
+#wraper ,#register, #forgot-password,.contact{
+    left: 50%;
+    position: absolute;
+    top: -5%;
+    transform: translate(-50%, 50%);
 }
 .icon-close{
     position: absolute;
     top:0px;
     right:0px;
     padding: 15px;
-    background-color: #253f52;
+    background-color: red;
     border-bottom-left-radius: 6px;
     color:#fff;
     font-weight: bold;
@@ -33,6 +35,8 @@
 }
 .title {
     text-align: center;
+    color: red;
+    font-weight: bolder;
     margin-bottom: 20px;
     letter-spacing: 1px;
 }
@@ -59,7 +63,7 @@
 }
 
 .input-box input {
-     background: transparent;
+     background: white;
      border: none;
      outline: none;
      width: 100%;
@@ -83,22 +87,21 @@
     height: 20px;
 }
 
-#wrapers .container a {
+#wraper .container a {
     float: right;
 }
-#wrapers .note-register {
+#wraper .note-register {
     margin: 15px 0;
 }
 
 #register {
     min-width: 400px;
-    height: 530px;
+    height: 480px;
     background-color: rgb(255,255,255,0.2);
     padding: 40px 20px;
     border-radius: 6px;
     box-shadow: 0 0 30px rgb(0,0,0,0.5);
     backdrop-filter: blur(20px);
-    position: absolute;
     overflow: hidden;
 }
 #forgot-password{
@@ -109,7 +112,6 @@
     box-shadow: 0 0 30px rgb(0,0,0,0.5);
     backdrop-filter: blur(20px);
     position: absolute;
-    overflow: hidden;
 }
 .font-bold {
     font-size: 1.1rem;
@@ -146,7 +148,7 @@
 }
 .address .icon{
     font-weight: bolder;
-    width: 30px;
+    font-size: 16px;
 }
 
 .information{
@@ -179,65 +181,8 @@
     cursor: pointer;
 }
 
-#footer {
+.footer {
     clear: both;
-}
-.tabs {
-    display: flex;
-    position: relative;
-}
-.tab-content {
-    width: 1300px;
-    background-color: rgb(255,255,255,0.6);
-    border-bottom-left-radius: 6px;
-    backdrop-filter: blur(20px);
-    padding: 20px 20px;
-}
-.tab-itrem {
-    min-width: 325px;
-    padding: 16px 20px;
-    font-size: 20px;
-    text-align: center;
-    color: #253f52;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom: 5px solid transparent;
-    background-color: rgb(255,255,255,0.6);
-    backdrop-filter: blur(20px);
-    cursor: pointer;
-    transition: all 0.5s ease;
-    opacity: 0.8;
-}
-.tabs .line {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 325px;
-    height: 6px;
-    border-radius: 15px;
-    background-color: #253f52;
-    transition: all 0.2s ease;
-}
-.tab-itrem:hover {
-    opacity: 1;
-    background-color: rgba(33, 109, 130, 0.7);
-    border-color: rgba(194, 53, 100, 0.1);
-}
-.tab-itrem.active {
-    opacity: 1;
-}
-.tab-pane {
-    color: #333;
-    display: none;
-    
-}
-.tab-pane.active {
-    display: block;
-}
-.tab-pane li {
-    padding: 10px 0px;
-    margin-left: 20px;
-    text-align: justify;
 }
 
 #information-company{
@@ -258,4 +203,8 @@
 }
 #contact {
     display: none;
+}
+#footer{
+    position: absolute;
+    top: 1000px;
 }
