--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -5,21 +5,15 @@
     background: #fdfcfc;
     border-radius: 10px;
 }
-
 .caroul-control{
     position: relative !important;
-    width: 98.9%;
+    width: 98% !important;
     margin: 0 5px !important;
     background-image: linear-gradient(0deg, red, rgb(245, 99, 99));
     height: max-content;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-
-.index-0{
-    z-index: 0 !important;
-}
-
 .accordion-button{
     color: black !important;
     font-size: 16px !important;
@@ -29,6 +23,9 @@
     margin: -15px;
 }
 
+.index-0{
+    z-index: 0 !important;
+}
 .caroul-control>div{
     margin: 5px;
 }
