--- a/CSS/detailsProduct.css
+++ b/CSS/detailsProduct.css
@@ -5,6 +5,9 @@ th,td{
      height: 500px;
      overflow-y: scroll; 
 }
+.header-fb a{
+     margin-left: 10px;
+}
 .details-content > p > img{
      width: 100%;
 }
