--- a/CSS/content.css
+++ b/CSS/content.css
@@ -141,11 +141,10 @@
     height: 65px;
 }
 
-.buy-product > button{
+.buy-product > a{
     margin-top: 25px;
     position: relative;
     float: left;
-    font-size: 1rem;
     width: 50%;
     font-stretch: extra-expanded;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
