--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1,4 +1,5 @@
 #content{
+    box-sizing: border-box;
     height: max-content;
     width: 80%;
     position: relative;
@@ -73,8 +74,9 @@
 .product-heading {
     display: flex;
     justify-content: space-between;
+    justify-items: space-between;
     position: relative;
-    align-items: center;
+    align-items: space-between;
 }
 
 .product-heading h3 {
@@ -121,14 +123,16 @@
 }
 
 .product-img {
+    height: 227px;
     text-align: center;
-    margin-bottom: 8px;
+    background-repeat: no-repeat;
+    background-image: url('../Assets/images/borderProduct.png');
+    padding-top: 35px;
 }
-
-.product-img img {
-    width: 160px;
+.product-img>a>img{
+    width: 90%;
+    height: 90%;
 }
-
 .product-name {
     font-size: 1.4rem;
     color: #444;
@@ -201,33 +205,6 @@
     font-size: 2.6rem;
     color: red;
 }
-
-.product-sale-off {
-    position: absolute;
-    top: 0;
-    color: white;
-    left: -6px;
-    background-color: #D70018;
-    padding: 8px 12px;
-    border-radius: 6px 30px 30px 6px;
-}
-
-.product-sale-off::after {
-    content: "";
-    position: absolute;
-    display: block;
-    bottom: -5px;
-    left: 0;
-    border-top: 6px solid #D70018;
-    border-left: 6px solid transparent;
-}
-
-.product-sale-off span {
-    font-size: 1.2rem;
-    color: var(--white);
-    font-weight: 700;
-}
-
 /* Small product */
 .small-product {
     margin-bottom: 30px;
