--- a/SCSS/header.css
+++ b/SCSS/header.css
@@ -249,8 +249,9 @@ i {
   margin-top: 5px;
   float: left;
   width: 60%;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 16px;
+  font-weight: bolder;
+  line-height: 20px;
 }
 
 .mobile-menu div i .mount-of {
